--- a/dis/pom.xml
+++ b/dis/pom.xml
@@ -41,7 +41,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.30</version>
+		</dependency>
 		<!-- iText (PDF generation) -->
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
